<resources>
    <string name="app_name">Weather Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather</string>
    <string name="temprature">Temprature</string>
    <string name="lanugaue">Launguage</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="Fahrenheit">fahrenheit</string>
    <string name="locationdefine">Location</string>
    <string name="windmesuarment">Wind</string>
    <string name="metersec">Meter/Sec</string>
    <string name="mileshour">miles/hour</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="titleactivityaps">MapsActivity</string>
    <string name="title_activity_mapss">MapssActivity</string>
    <string name="wind">Wind</string>
    <string name="humdity">Humdity</string>
    <string name="perssure">Pressure</string>
    <string name="cloud">Cloud</string>
    <string name="unit">Unit</string>
    <string name="unitforwind">Wind Unit</string>
    <string name="unittemp"> Temp Unit </string>
    <string name="selectlocationway">Select Location way:</string>
    <string name="setting">Setting</string>
    <string name="location">Location</string>
    <string name="ok">ok</string>
    <string name="delete">Delete</string>
    <string-array name="sound_options">
        <item>Notification sound</item>
        <item>Alarm sound</item>
    </string-array>
    <string name="sound_prompt">Select a sound option</string>
    <string name="alertoptian">Alert Setting</string>
    <string name="setalarm">Set Alarm</string>
    <string name="cancel">Cancel</string>
    <string name="alarts">Alarts</string>
    <string name="fav">Favourite</string>
    <string name="home">Home</string>
    <string name="selectlocation">SelectLocation</string>
    <string name="connectionmessage">There is no connection can\'t last Forcast</string>

</resources>