<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment2"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/settingFragment"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/setting" />
        <item
            android:id="@+id/alertFragment"
            android:icon="@drawable/baseline_add_alert_24"
            android:title="@string/alarts" />
        <item
            android:id="@+id/favFragment"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/fav" />


    </group>

</menu>